samples/_failures_safe/1761143691_e75b23_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5e5dcee5.c: In function ‘analyze_logs’:
./samples/SAFE/__tmp_5e5dcee5.c:125:41: error: expected ‘)’ at end of input
  125 |                count > 0 ? (level_counts
      |                            ~            ^
      |                                         )
./samples/SAFE/__tmp_5e5dcee5.c:125:16: error: expected declaration or statement at end of input
  125 |                count > 0 ? (level_counts
      |                ^~~~~
./samples/SAFE/__tmp_5e5dcee5.c:125:16: error: expected declaration or statement at end of input
